app/assets/stylesheets/views/tasks/nomenclature/browse.scss
#browse-view {

  .filter-button-open {
    transform: rotate(180deg);
  }

  #vue-browse-validation-panel {
    .soft-validation-box {
      height: 100%;
      box-sizing: border-box;
    }
    margin-bottom: 1em;
  }

  .nav-column {
    width: 400px;
    min-width: 270px
  }

  .citations {
    word-break: break-word;
  }

  #third-column {
    max-width: 400px;
  }
  .name {
    font-size: 18px;
    color: #000;
  }

  .ui-autocomplete {
    width: 500px;
    white-space: normal;
  }
  .ui-autocomplete-input {
    box-sizing: border-box !important;
    min-width: 300px !important;
    max-width: 300px !important;
  }

  @media screen and (min-width: 980px) {
    .ui-autocomplete {
      width: auto;
      white-space: nowrap;
    }
  }
  .soft_validation_anchor {
    cursor: pointer;
    margin-left: 5px;
  }

  .taxonomic_history,
  .citations {
    .annotation__note {
      display: none;
    }
  }

  .modal-container {
    width: 600px;
  }
  .history__origin {
    color: #FFF;
    padding-left: 7px;
    padding-right: 7px;
    margin-right: 4px;
    border-radius: 3px;
    &.protonym {
      background-color: #7986CB;
    }
    &.combination {
      background-color: #FFB74D;
    }
    &.taxon_name_relationship {
      background-color: #9575CD;
    }
    &.error {
      background-color: #A1887F;
    }
  }

  #filterBrowse {
    transition: opacity 1s ease-out;
    opacity: 0;
    height: 0;
    overflow: hidden;
  }

  #filterBrowse.active {
    opacity: 1;
    height: auto;
  }
}

.history__citation_notes p {
  display: inline;
  font-weight: normal;
}

